# onemcb

./: Cargo.toml  Dockerfile  fly.toml
src/: main.rs
templates/: checkbox.html  counter.html  index.html
